# json-api-rs

./: Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: Rust.yml  RustDoc.yml
json_api/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Client.html  struct.JsonDocument.html  struct.LinksObject.html  struct.ResourceObject.html
json_api/client/: struct.Client.html
json_api/types/: struct.JsonDocument.html  struct.LinksObject.html  struct.ResourceObject.html
search.desc/json_api/: json_api-desc-0-.js
search.index/: 1b3254e5657b.js  31a37502338e.js  root.js
search.index/crateNames/: 53e2da1d6648.js
search.index/desc/: 1300e6d3a982.js
search.index/entry/: fa594c9cdf4b.js
search.index/function/: 5edfef4acb81.js
search.index/generic_inverted_index/: 86265b9274bf.js
search.index/name/: 30474f11c473.js
search.index/normalizedName/: 0d9644d66376.js
search.index/path/: d876486282da.js
search.index/type/: 30ea4f2add60.js
src/: client.rs  lib.rs  types.rs
src/json_api/: client.rs.html  lib.rs.html  types.rs.html
test_data/: resource_object.json
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde_core/de/: trait.Deserialize.js
