[package]
name = "json-api"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.9", features = [ "json" ], default-features = false }
serde = { version = "1.0.215", features = [ "derive" ] }
serde_json = "1.0.133"
thiserror = "2.0.3"
url = { version = "2.5.4", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.41.1", features = [ "macros" ] }

[features]
default = [ "rustls-tls" ]
native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
