[package]
name = "json-api"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.12", features = [ "json" ], default-features = false }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.138"
thiserror = "2.0.11"
url = { version = "2.5.4", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.43.0", features = [ "macros" ] }

[features]
default = [ "rustls-tls" ]
native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
