[package]
name = "json-api"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.13.3", features = [ "json" ], default-features = false }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
thiserror = "2.0.18"
url = { version = "2.5.8", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.52.3", features = [ "macros" ] }

[features]
default = [ "rustls" ]
native-tls = [ "reqwest/native-tls" ]
rustls = [ "reqwest/rustls" ]
